Add coverage.sh bash script

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ dart_task:
 jobs:
   include:
     - stage: coverage
-      script: pub global activate test_coverage && pub global run test_coverage && bash <(curl -s https://codecov.io/bash)
+      script: bash coverage.sh
