Remove param validation and make to optional
Close #4

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,6 @@
 name: mailto
-version: 0.2.0+2
+version: 0.3.0
 description: Simple Dart package for creating mailto links in your Flutter apps
-author: Vince Varga <vince.varga@smaho.com>
 homepage: https://github.com/smaho-engineering/mailto
 repository: https://github.com/smaho-engineering/mailto
 issue_tracker: https://github.com/smaho-engineering/mailto/issues
