Set Travis Dart channel to beta
The null-safety has not landed in stable yet, so we need to change the
channel to beta.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: dart
 
+dart:
+  # Null-safety is currently only available on the beta channel.
+  # Once null-safety lands in stable, this can be removed.
+  # For more info: https://docs.travis-ci.com/user/languages/dart/#choosing-dart-versions-to-test-against
+  - beta
+
 dart_task:
 - test
 - dartfmt
