--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: mailto
-version: 2.0.0-nullsafety.0
+version: 2.0.0
 description: Simple Dart package for creating mailto links in your Flutter apps
 homepage: https://github.com/smaho-engineering/mailto
 repository: https://github.com/smaho-engineering/mailto
 issue_tracker: https://github.com/smaho-engineering/mailto/issues
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 dev_dependencies:
   pedantic: ^1.10.0-nullsafety.3
   test: ^1.16.0-nullsafety.13
+scripts: derry.yaml
